--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "map": "cpp",
         "string_view": "cpp",
         "unordered_map": "cpp",
-        "__string": "cpp"
-    }
+        "__string": "cpp",
+        "__locale": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
