--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "StoreSim",
+            "request": "launch",
+            "mainClass": "StoreSim",
+            "projectName": "sillycsstuff_8bb3b2de"
+        },
+        {
+            "type": "java",
             "name": "oct3",
             "request": "launch",
             "mainClass": "lectureNotes.oct3",
